LoadLibraryW failed from tools/jpackage tests after JDK-8242302

XMLWordPrintable

    • b21
    • b23
    • windows
    • Not verified

      After JDK-8242302, many tools/jpackage tests failed on Windows system (tested Windows 2016), due to LoadLibraryW( ...bin\jli.dll) faild. System error [126], screenshot attached.

            Assignee:
            Alexey Semenyuk
            Reporter:
            Amy Lu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: