8244634: LoadLibraryW failed from tools/jpackage tests after JDK-8242302

Reviewed-by: herrick, almatvee